--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,59 @@
+body {
+    background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-direction: column;
+}
+h1 {
+    font-family: Helvetica, sans-serif;
+    align-self: flex-start;
+    margin: 50px 50px 0px 50px;
+    color: rgb(78, 78, 78);
+}
+#create-task {
+    align-self: flex-start;
+    margin: 20px 50px;
+    text-align: center;
+}
+#new-task-input-field {
+    height: 40px;
+    width: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    padding-left: 8px;
+    border-radius: 5px;
+    border: 0px;
+}
+#btn-add-new-task {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    border-color:rgb(179, 179, 179);
+    border-radius: 5px;
+    padding: 8px 12px;
+    margin-left: 5px;
+    color: rgb(78, 78, 78);
+}
+#to-do-list {    
+    width: 350px;
+    margin-left: 47px;
+}
+.task-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    padding: 10px;
+    color:rgb(117, 116, 116);
+    border-style: solid;
+    border-width: 2px;
+    border-color:rgb(179, 179, 179);
+    margin: 3px;
+}
 .crossed-through {
     text-decoration: line-through;
-    color: red;
-    font-family: 'Courier New', Courier, monospace;
 }
-body {
-    background-color: rgb(46, 146, 68);
+.btn-del {
+    align-self: flex-end;
+    border: none;
+    color:rgb(116, 116, 116);
 }
